--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "endify-test",
-  "version": "0.0.1",
+  "name": "endify",
+  "version": "0.0.4",
   "description": "Vue.js on front, Node.js behind, Electron ready, Mobile soon - All in one codebase",
   "main": "src/endify.js",
   "scripts": {
@@ -25,9 +25,6 @@
       }
     }
   },
-  "bundledDependencies": [
-    "webpack"
-  ],
   "homepage": "https://github.com/endify/endify#readme",
   "dependencies": {
     "@babel/core": "^7.9.6",
