--- a/package.json
+++ b/package.json
@@ -28,13 +28,18 @@
   "homepage": "https://github.com/endify/endify#readme",
   "dependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/plugin-proposal-optional-chaining": "^7.10.1",
     "@babel/plugin-transform-modules-commonjs": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.6",
+    "@babel/preset-typescript": "^7.10.4",
     "awilix": "^4.2.5",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
+    "babel-plugin-parameter-decorator": "^1.0.16",
+    "babel-plugin-transform-typescript-metadata": "^0.3.0",
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "css-loader": "^3.5.2",
@@ -47,9 +52,12 @@
     "jest": "^25.3.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
     "vue": "^2.6.11",
     "vue-devtools": "^5.1.3",
     "vue-loader": "^15.9.1",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.1.6",
     "vue-server-renderer": "^2.6.11",
     "vue-style-loader": "^4.1.2",
