--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "chalk": "^4.0.0",
     "css-loader": "^3.5.2",
     "dotenv-extended": "^2.8.0",
+    "electron": "^10.1.2",
+    "electron-builder": "^22.8.1",
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
     "file-loader": "^6.0.0",
@@ -75,8 +77,5 @@
   "engines": {
     "node": ">=12.0.0"
   },
-  "devDependencies": {
-    "electron": "10.1.2",
-    "electron-builder": "^22.8.0"
-  }
+  "devDependencies": {}
 }
