--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^2.5.2",
+    "yaml-loader": "^0.6.0",
     "yargs": "^15.4.0"
   },
   "private": false,
