--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "endify",
   "version": "0.5.3",
   "description": "Vue.js on front, Node.js behind, Electron ready, Mobile soon - All in one codebase",
-  "main": "src/endify.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config packages/endify-cli/webpack.config.cli.js"
   },
   "repository": {
     "type": "git",
@@ -15,71 +16,32 @@
   "bugs": {
     "url": "https://github.com/endify/endify/issues"
   },
-  "bin": "src/cli/index.js",
-  "babel": {
-    "env": {
-      "test": {
-        "plugins": [
-          "@babel/plugin-transform-modules-commonjs"
-        ]
-      }
-    }
-  },
+  "bin": "packages/endify-cli/build/main.js",
+  "babel": {},
   "homepage": "https://github.com/endify/endify#readme",
   "dependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-decorators": "^7.10.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.9.0",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-typescript": "^7.10.4",
-    "awilix": "^4.2.5",
-    "axios": "^0.19.2",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.13.1",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.0",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/node": "^14.14.31",
+    "babel-loader": "^8.2.2",
     "babel-plugin-parameter-decorator": "^1.0.16",
-    "babel-plugin-transform-typescript-metadata": "^0.3.0",
-    "body-parser": "^1.19.0",
-    "chalk": "^4.0.0",
-    "css-loader": "^3.5.2",
-    "dotenv-extended": "^2.8.0",
-    "electron": "^10.1.2",
-    "electron-builder": "^22.8.1",
-    "electron-log": "^4.2.4",
-    "electron-updater": "^4.3.5",
-    "express": "^4.17.1",
-    "express-promise-router": "^3.0.3",
-    "file-loader": "^6.0.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.4.1",
-    "jest": "^25.3.0",
-    "sass": "^1.26.3",
-    "sass-loader": "^8.0.2",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
-    "vue": "^2.6.11",
-    "vue-devtools": "^5.1.3",
-    "vue-loader": "^15.9.1",
-    "vue-meta": "^2.4.0",
-    "vue-router": "^3.1.6",
-    "vue-server-renderer": "^2.6.11",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "vuex": "^3.1.3",
-    "vuex-router-sync": "^5.0.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.1",
+    "chalk": "^4.1.0",
+    "random-text-faces": "^1.0.9",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.2.2",
+    "webpack": "^5.24.2",
     "webpack-node-externals": "^2.5.2",
-    "yaml-loader": "^0.6.0",
-    "yargs": "^15.4.0"
+    "yargs": "^16.2.0"
   },
   "private": false,
   "engines": {
     "node": ">=12.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "webpack-cli": "^4.5.0"
+  }
 }
