--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@babel/plugin-proposal-decorators": "^7.13.5",
     "@babel/plugin-proposal-optional-chaining": "^7.13.0",
     "@babel/preset-typescript": "^7.13.0",
-    "@types/webpack": "^4.41.26",
     "@vue/compiler-sfc": "^3.0.7",
     "@vue/server-renderer": "^3.0.7",
     "babel-loader": "^8.2.2",
@@ -33,14 +32,16 @@
     "babel-plugin-transform-typescript-metadata": "^0.3.1",
     "chalk": "^4.1.0",
     "express": "^4.17.1",
+    "null-loader": "^4.0.1",
     "random-text-faces": "^1.0.9",
     "sass": "^1.32.8",
+    "tapable": "^2.2.0",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.2",
     "vue": "^3.0.7",
     "vue-loader": "^16.1.2",
     "vue-router": "4",
-    "webpack": "^5.24.2",
+    "webpack": "^5.24.3",
     "webpack-merge": "^5.7.3",
     "webpack-node-externals": "^2.5.2",
     "yargs": "^16.2.0"
@@ -51,7 +52,9 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
+    "@types/webpack": "^4.41.26",
     "@types/webpack-env": "^1.16.0",
+    "@types/webpack-node-externals": "^2.5.0",
     "webpack-cli": "^4.5.0"
   }
 }
