--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vue": "^3.0.7",
     "vue-loader": "^16.1.2",
     "vue-router": "4",
+    "vuex": "^4.0.0",
     "webpack": "^5.24.3",
     "webpack-merge": "^5.7.3",
     "webpack-node-externals": "^2.5.2",
