--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   "bugs": {
     "url": "https://github.com/endify/endify/issues"
   },
-  "bin": {
-    "endify": "src/cli/index.js"
-  },
+  "bin": "src/cli/index.js",
   "babel": {
     "env": {
       "test": {
@@ -61,14 +59,14 @@
     "sass-loader": "^8.0.2",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
-    "vue": "^2.6.11",
+    "vue": "2.6.14",
     "vue-devtools": "^5.1.3",
     "vue-loader": "^15.9.1",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.1.6",
-    "vue-server-renderer": "^2.6.11",
+    "vue-server-renderer": "2.6.14",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "2.6.14",
     "vuex": "^3.1.3",
     "vuex-router-sync": "^5.0.0",
     "webpack": "^4.42.1",
@@ -82,6 +80,5 @@
   "private": false,
   "engines": {
     "node": ">=12.0.0"
-  },
-  "devDependencies": {}
+  }
 }
