--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,7 @@ typings/
 .env
 .env.test
 
-# parcel-bundler cache (https://parceljs.org/)
+# parcel-launcher cache (https://parceljs.org/)
 .cache
 
 # Next.js build output
