--- a/package.json
+++ b/package.json
@@ -1,61 +1,30 @@
 {
   "name": "endify",
-  "version": "0.5.3",
-  "description": "Vue.js on front, Node.js behind, Electron ready, Mobile soon - All in one codebase",
-  "main": "src/index.js",
+  "version": "1.0.0",
+  "description": "Vue.js on front, Node.js behind, Electron ready - All in one codebase",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config packages/endify-cli/webpack.config.cli.js"
+    "lint": "eslint . --ext .js,.vue,.ts"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/endify/endify.git"
   },
   "author": "pieczorx",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/endify/endify/issues"
   },
-  "bin": "packages/endify-cli/build/main.js",
-  "babel": {},
   "homepage": "https://github.com/endify/endify#readme",
-  "dependencies": {
-    "@babel/core": "^7.13.1",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.13.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.13.0",
-    "@babel/preset-typescript": "^7.13.0",
-    "@vue/compiler-sfc": "^3.0.7",
-    "@vue/server-renderer": "^3.0.7",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-parameter-decorator": "^1.0.16",
-    "babel-plugin-transform-typescript-metadata": "^0.3.1",
-    "chalk": "^4.1.0",
-    "express": "^4.17.1",
-    "null-loader": "^4.0.1",
-    "random-text-faces": "^1.0.9",
-    "sass": "^1.32.8",
-    "tapable": "^2.2.0",
-    "ts-loader": "^8.0.17",
-    "typescript": "^4.2.2",
-    "vue": "^3.0.7",
-    "vue-loader": "^16.1.2",
-    "vue-router": "4",
-    "vuex": "^4.0.0",
-    "webpack": "^5.24.3",
-    "webpack-merge": "^5.7.3",
-    "webpack-node-externals": "^2.5.2",
-    "yargs": "^16.2.0"
-  },
   "private": false,
   "engines": {
     "node": ">=12.0.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.31",
-    "@types/webpack": "^4.41.26",
-    "@types/webpack-env": "^1.16.0",
-    "@types/webpack-node-externals": "^2.5.0",
-    "webpack-cli": "^4.5.0"
+    "eslint": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint-plugin-vue": "^7.19.1",
+    "typescript": "^4.4.4"
   }
 }
