--- a/packages/endify-core/package.json
+++ b/packages/endify-core/package.json
@@ -17,5 +17,10 @@
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
     "webpack-node-externals": "^3.0.0"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "cli-progress": "^3.9.1",
+    "tapable": "^2.2.1"
   }
 }
