--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.0.0",
     "eslint-plugin-vue": "^7.19.1",
     "typescript": "^4.4.4"
   }
