--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,9 +8,9 @@
     "build": "webpack"
   },
   "exports": {
-    "./launcher": "./build/launcher.js",
-    "./entry": "./build/entry.js",
-    ".": "./build/index.js"
+    "./launcher": "./dist/launcher.js",
+    "./entry": "./dist/entry.js",
+    ".": "./dist/index.js"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -24,5 +24,8 @@
     "typescript": "^4.4.4",
     "webpack-cli": "^4.9.0",
     "webpack-node-externals": "^3.0.0"
+  },
+  "peerDependencies": {
+    "@endify/core": "^1.0.0"
   }
 }
