--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -9,7 +9,8 @@
   },
   "exports": {
     "./extension": "./build/extension.js",
-    "./client": "./build/client.js"
+    "./client": "./build/client.js",
+    "./launcher": "./build/launcher.js"
   },
   "dependencies": {
     "@vue/compiler-sfc": "^3.2.20",
@@ -17,6 +18,11 @@
     "vue-loader": "^15.9.8"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "webpack": "^5.58.2"
+  },
+  "peerDependencies": {
+    "@endify/core": "^1.0.0",
+    "@endify/server": "^1.0.0"
   }
 }
