--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -8,9 +8,8 @@
     "build": "webpack"
   },
   "exports": {
-    "./extension": "./build/extension.js",
-    "./client": "./build/client.js",
-    "./launcher": "./build/launcher.js"
+    ".": "./dist/extension.js",
+    "./launcher": "./dist/launcher.js"
   },
   "dependencies": {
     "@vue/compiler-sfc": "^3.2.20",
@@ -18,8 +17,15 @@
     "vue-loader": "^15.9.8"
   },
   "devDependencies": {
+    "@types/node": "^16.11.6",
+    "@types/webpack-env": "^1.16.3",
+    "typescript": "^4.4.4",
     "babel-eslint": "^10.1.0",
-    "webpack": "^5.58.2"
+    "copy-webpack-plugin": "^9.0.1",
+    "ts-loader": "^9.2.6",
+    "webpack": "^5.58.2",
+    "webpack-cli": "^4.9.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "peerDependencies": {
     "@endify/core": "^1.0.0",
