--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -8,21 +8,28 @@
     "build": "webpack"
   },
   "exports": {
-    ".": "./dist/extension.js",
-    "./launcher": "./dist/launcher.js"
+    "./extension": "./dist/extension.js",
+    "./launcher": "./dist/launcher.js",
+    "./entry": "./src/entry/index.ts",
+    ".": "./"
   },
   "dependencies": {
     "@vue/compiler-sfc": "^3.2.20",
+    "error-overlay-webpack-plugin": "^0.1.5",
+    "html-webpack-plugin": "^5.5.0",
     "vue": "^3.2.20",
-    "vue-loader": "^15.9.8"
+    "vue-loader": "^16.8.2",
+    "vue-template-compiler": "^2.6.14",
+    "webpack-dev-middleware": "^5.2.1",
+    "webpack-hot-middleware": "^2.25.1"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
     "@types/webpack-env": "^1.16.3",
-    "typescript": "^4.4.4",
     "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^9.0.1",
     "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.1",
     "webpack-node-externals": "^3.0.0"
