--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "endify",
+  "name": "endify-fork",
   "version": "0.7.0",
   "description": "Vue.js on front, Node.js behind, Electron ready, Mobile soon - All in one codebase",
   "main": "src/endify.js",
